<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    tools:ignore="HardcodedText">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".AddActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_side_margin"
                android:layout_marginTop="@dimen/top_small_margin"
                android:text="@string/set_activity_title"
                android:theme="@style/normal_text_left_theme" />

            <AutoCompleteTextView
                android:id="@+id/set_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_side_margin"
                android:layout_marginRight="@dimen/small_side_margin"
                android:hint="Běhání"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_side_margin"
                android:layout_marginTop="@dimen/spaces_in_form"
                android:text="@string/set_distance_title"
                android:theme="@style/normal_text_left_theme" />

            <EditText
                android:id="@+id/set_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_side_margin"
                android:layout_marginRight="@dimen/small_side_margin"
                android:hint="10 km"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_side_margin"
                android:layout_marginTop="@dimen/spaces_in_form"
                android:text="@string/set_duration_title"
                android:theme="@style/normal_text_left_theme" />

            <EditText
                android:id="@+id/set_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_side_margin"
                android:layout_marginRight="@dimen/small_side_margin"
                android:hint="1 hodina 20 minut"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_side_margin"
                android:layout_marginTop="@dimen/spaces_in_form"
                android:text="@string/set_notes_title"
                android:theme="@style/normal_text_left_theme" />

            <EditText
                android:id="@+id/set_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_side_margin"
                android:layout_marginRight="@dimen/small_side_margin"
                android:hint="15.11.2021 Běhalo se krásně."
                android:inputType="text" />

            <Button
                android:id="@+id/btn_select_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_side_margin"
                android:layout_marginTop="@dimen/spaces_in_form"
                android:layout_marginRight="@dimen/small_side_margin"
                android:padding="@dimen/button_size"
                android:text="@string/choose_file"
                android:textAllCaps="false"
                android:textSize="@dimen/small_text_size" />

            <Button
                android:id="@+id/write_activity_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_side_margin"
                android:layout_marginTop="@dimen/spaces_in_form"
                android:layout_marginRight="@dimen/small_side_margin"
                android:padding="@dimen/button_size"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textSize="@dimen/small_text_size" />

            <ImageView
                android:id="@+id/imageViewPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/small_side_margin"
                android:background="#ffffff"
                android:src="@drawable/note"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:itemTextAppearance="?android:attr/textAppearanceMedium"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>

