<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMICalculatorActivity"
    tools:ignore="HardcodedText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".BMICalculatorActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_side_margin"
            android:layout_marginTop="@dimen/top_small_margin"
            android:text="@string/set_height"
            android:theme="@style/normal_text_left_theme" />

        <EditText
            android:id="@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_side_margin"
            android:layout_marginRight="@dimen/small_side_margin"
            android:hint="180"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_side_margin"
            android:layout_marginTop="@dimen/spaces_in_form"
            android:text="@string/set_weight"
            android:theme="@style/normal_text_left_theme" />

        <EditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_side_margin"
            android:layout_marginRight="@dimen/small_side_margin"
            android:hint="80"
            android:inputType="text" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_side_margin"
            android:layout_marginTop="@dimen/spaces_in_form"
            android:layout_marginRight="@dimen/small_side_margin"
            android:padding="@dimen/button_size"
            android:text="@string/calculate_title"
            android:textAllCaps="false"
            android:textSize="@dimen/small_text_size" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:itemTextAppearance="?android:attr/textAppearanceMedium"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>